samples/_failures_safe/1761248663_fc9b6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_848f760b.c: In function ‘main’:
./samples/SAFE/__tmp_848f760b.c:180:5: error: expected declaration or statement at end of input
  180 |     for (int i = 0; i < token_count; i++) {
      |     ^~~
./samples/SAFE/__tmp_848f760b.c:180:5: error: expected declaration or statement at end of input
